cd to HOME after opening scratch org buffer

--- a/emacs.org
+++ b/emacs.org
@@ -684,6 +684,7 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), also prompt for year/month for calen
   "Save the scratch buffer in a file."
   (interactive)
   (find-file jw-org-scratch-file)
+  (cd (getenv "HOME"))
   (when (get-buffer "*scratch*") (kill-buffer "*scratch*")))
 
 (defun toggle-scratch-buffer ()
