--- a/emacs.org
+++ b/emacs.org
@@ -100,7 +100,7 @@ Now, start emacs.
 (use-package yasnippet)
 (use-package yasnippet-snippets)
 
-(use-package helm :pin melpa) ;; 3.0 had a bug with helm-ff-delete-files. can unpin when 3.1 is released.
+(use-package helm)
 (use-package helm-ag)
 (use-package helm-projectile)
 (use-package helm-flycheck)
