Fix org strickthrough'd color to be gray

--- a/emacs.org
+++ b/emacs.org
@@ -1562,6 +1562,9 @@ org-keys
                   `(org-link ((t (:underline nil))))
                   `(org-date ((t (:underline nil)))))
 
+(add-to-list 'org-emphasis-alist '("+" (:strike-through t :inherit shadow)))
+(delete '("+" (:strike-through t)) org-emphasis-alist)
+
 (defun org-babel-src-yasnippet (ob-lang &optional ob-src-header-override)
   (let* ((yas-src-shortcut (concat "src-" (jw--symbol-name ob-lang)))
          (ob-src-string (format "#+BEGIN_SRC %s\n$0\n#+END_SRC" (jw--symbol-name (or ob-src-header-override ob-lang)))))
