Fix org-src editting

--- a/emacs.org
+++ b/emacs.org
@@ -1401,7 +1401,7 @@ org-keys
       org-tags-column -100
       org-src-preserve-indentation t
       org-src-tab-acts-natively t
-      org-src-window-setup 'current-window
+      org-src-window-setup 'reorganize-frame
       org-cycle-open-archived-trees t
       org-hide-block-startup t
       org-ellipsis " …"
