--- a/emacs.org
+++ b/emacs.org
@@ -495,6 +495,7 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (add-to-list 'auto-mode-alist '("Vagrantfile$" . ruby-mode))
 (add-to-list 'auto-mode-alist '("Berksfile$" . ruby-mode))
 (add-to-list 'auto-mode-alist '("\\.irbrc$" . ruby-mode))
+(add-hook 'ruby-mode-hook (lambda () (flycheck-mode -1)))
 
 (add-hook 'text-mode-hook 'flyspell-mode)
 
