Remove helm-org-capture shortcut

--- a/emacs.org
+++ b/emacs.org
@@ -1338,7 +1338,7 @@ org-keys
 | o         | jw-todo                    | jw-keymap |               |
 | a         | org-agenda                 | jw-keymap |               |
 | A         | jw-org-agenda              | jw-keymap |               |
-| c         | jw-org-capture             | jw-keymap |               |
+| c         | org-capture                | jw-keymap |               |
 | <tab>     | org-pomodoro               | jw-keymap |               |
 | C-c <     | org-time-stamp             | local     | org-mode-hook |
 | C-c .     | org-time-stamp-inactive    | local     | org-mode-hook |
@@ -1379,12 +1379,6 @@ org-keys
   (interactive "P")
   (org-id-get-create arg)
   (org-id-copy))
-
-(defun jw-org-capture (arg)
-  (interactive "P")
-  (if arg
-      (org-capture '(16))
-    (helm-org-capture-templates)))
 
 (keybinding-org-table 'org-keys)
 
