--- a/emacs.org
+++ b/emacs.org
@@ -1557,6 +1557,7 @@ counsel-keys
 | M-s s   | counsel-ag                |                       |                  |       |
 | M-s r   | counsel-rg                |                       |                  |       |
 | M-y     | counsel-yank-pop          |                       |                  |       |
+| !       | ivy-dispatching-done      | ivy-minibuffer-map    |                  |       |
 | C-M-? b | counsel-descbinds         |                       |                  |       |
 | C-M-? f | counsel-describe-function |                       |                  |       |
 | C-M-? v | counsel-describe-variable |                       |                  |       |
