Simpler way to delete emacs subprocesses

--- a/emacs.org
+++ b/emacs.org
@@ -832,6 +832,10 @@ If the prefix arg is 4, then kill the comment on the current line."
 (defun display-current-prefix-arg (arg)
   (interactive "P")
   (message "%s" arg))
+
+(defun delete-process-i(p)
+  (interactive `(,(completing-read "Kill process: " (mapcar 'process-name (process-list)) () t)))
+  (delete-process p))
 #+END_SRC
 
 *** emacs
@@ -889,7 +893,7 @@ base-keys (keys not in other parts of this config)
 | C-x C-c       | life-might-be-too-much                    |             |      |                           |
 | C-h           | nil                                       |             |      | remove original help      |
 | C-M-?         | help-command                              |             |      |                           |
-| C-M-? p       | list-processes                            |             |      |                           |
+| C-M-? p       | delete-process-i                          |             |      |                           |
 | <return>      | toggle-frame-maximized                    | ctl-x-5-map |      |                           |
 | S-<return>    | toggle-frame-fullscreen                   | ctl-x-5-map |      |                           |
 | M-!           | cmd-dwim                                  |             |      |                           |
