--- a/emacs.org
+++ b/emacs.org
@@ -938,6 +938,7 @@ base-keys (keys not in other parts of this config)
 | d             | date                                      | jw-keymap   |      |                           |
 | i             | toggle-scratch-buffer                     | jw-keymap   |      |                           |
 | I             | tmp-scratch-buffer                        | jw-keymap   |      |                           |
+| w             | browse-url-at-point                       | jw-keymap   |      |                           |
 
 #+HEADER: :var base-keys=base-keys
 #+BEGIN_SRC emacs-lisp
