--- a/emacs.org
+++ b/emacs.org
@@ -1576,10 +1576,6 @@ counsel-keys
 
 (setq ivy-use-virtual-buffers t)
 (setq ivy-count-format "%d/%d ")
-;; (setq ivy-use-selectable-prompt t) ;; todojoe -- what does this do?
-
-;; ivy-read-action-function can be switched so that actions are selected by cursor
-;; but then they can no longer be selected by key...
 
 (setq max-mini-window-height 0.90) ;; fix for https://github.com/abo-abo/swiper/issues/2397
 
@@ -1592,6 +1588,7 @@ counsel-keys
 (defun counsel-find-file--eshell-action (file) (let ((default-directory ivy--directory)) (eshell)))
 (defun counsel-find-file--counsel-ag-action (file) (counsel-ag nil ivy--directory))
 (defun counsel-find-file--counsel-rg-action (file) (counsel-rg nil ivy--directory))
+(defun counsel-find-file--jw-sbt-action (file) (let ((default-directory ivy--directory)) (jw-sbt)))
 
 (ivy-set-actions
  'counsel-find-file
@@ -1599,7 +1596,8 @@ counsel-keys
    ("g" counsel-find-file--magit-status-action "magit-status in dir")
    ("xe" counsel-find-file--eshell-action "eshell in dir")
    ("ss" counsel-find-file--counsel-ag-action "ag in dir")
-   ("sr" counsel-find-file--counsel-rg-action "rg in dir")))
+   ("sr" counsel-find-file--counsel-rg-action "rg in dir")
+   ("js" counsel-find-file--jw-sbt-action "sbt in dir")))
 
 (defun counsel-projectile-switch-project--jw-sbt-action (project)
   (let ((projectile-switch-project-action 'jw-sbt))
