--- a/emacs.org
+++ b/emacs.org
@@ -1594,15 +1594,17 @@ counsel-keys
 (defun counsel-find-file--counsel-ag-action (file) (counsel-ag nil ivy--directory))
 (defun counsel-find-file--counsel-rg-action (file) (counsel-rg nil ivy--directory))
 (defun counsel-find-file--jw-sbt-action (file) (let ((default-directory ivy--directory)) (jw-sbt)))
+(defun counsel-find-file--sbt-compile-action (file) (let ((default-directory ivy--directory)) (sbt-compile ivy-current-prefix-arg)))
 
-(ivy-set-actions
+(ivy-add-actions
  'counsel-find-file
- '(("!" counsel-find-file--cmd-dwim-action "cmd-dwim in dir")
-   ("g" counsel-find-file--magit-status-action "magit-status in dir")
-   ("xe" counsel-find-file--eshell-action "eshell in dir")
-   ("ss" counsel-find-file--counsel-ag-action "ag in dir")
-   ("sr" counsel-find-file--counsel-rg-action "rg in dir")
-   ("js" counsel-find-file--jw-sbt-action "sbt in dir")))
+ '(("!" counsel-find-file--cmd-dwim-action "cmd-dwim in pwd")
+   ("g" counsel-find-file--magit-status-action "magit-status in pwd")
+   ("xe" counsel-find-file--eshell-action "eshell in pwd")
+   ("ss" counsel-find-file--counsel-ag-action "ag in pwd")
+   ("sr" counsel-find-file--counsel-rg-action "rg in pwd")
+   ("scs" counsel-find-file--jw-sbt-action "sbt in pwd")
+   ("scc" counsel-find-file--sbt-compile-action "sbt compile in pwd")))
 
 (defun counsel-projectile-switch-project--jw-sbt-action (project)
   (let ((projectile-switch-project-action 'jw-sbt))
@@ -1612,11 +1614,11 @@ counsel-keys
   (let ((projectile-switch-project-action (lambda () (sbt-compile ivy-current-prefix-arg))))
     (counsel-projectile-switch-project-by-name project)))
 
-(ivy-set-actions
+(ivy-add-actions
  'counsel-projectile-switch-project
  '(("g" counsel-projectile-switch-project-action-vc "open project in vc-dir / magit / monky") ;; counsel-projectile defaults magit to v, but I like g
-   ("js" counsel-projectile-switch-project--jw-sbt-action "sbt")
-   ("jc" counsel-projectile-switch-project--sbt-compile-action "sbt compile")))
+   ("scs" counsel-projectile-switch-project--jw-sbt-action "sbt")
+   ("scc" counsel-projectile-switch-project--sbt-compile-action "sbt compile")))
 #+END_SRC
 
 * private
